# foxy_exceptions

./: .gitignore  README.md  pyproject.toml
foxy_exceptions/: __init__.py  base_notifier.py  config.py  dedupe.py  http_client.py  logger.py  notifier_async.py  notifier_sync.py
foxy_exceptions/adapters/: __init__.py  celery_adapter.py  django_adapter.py  fastapi_adapter.py
foxy_exceptions/examples/: usage_async.py  usage_fastapi.py
