[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxy-exceptions"
version = "0.1.0"
description = "Universal async error notification module with dedupe, retry, adapters and safe sync wrapper."
authors = [
    { name = "Gryis" }
]
readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.9"

dependencies = [
    "aiohttp>=3.9",
    "requests>=2.32.5"
]

[project.optional-dependencies]
fastapi = ["fastapi", "starlette"]
django = ["django"]
celery = ["celery"]
